# place-retrieval

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: build_index.py  evaluate.py  extract_embeddings.py  search.py  validate_dataset.py
src/place_retrieval/: data.py  embeddings.py  index.py  metrics.py
tests/: test_metrics.py
