[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "place-retrieval"
version = "0.1.0"
description = "Image-based place recognition and retrieval system"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]